--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <li>
 </ul>
 </body>
-<script type="text/javascript" src="lazyLoad.js"></script>
+<!--<script type="text/javascript" src="lazyLoad.js"></script>-->
+<script type="text/javascript" src="js/require.js" data-main="js/main.js"></script>
 </html>
